# quant_bitcoin

./: AGENTS.md  Dockerfile  README.md  STATUS.md  docker-compose.yml  pyproject.toml  quant_bitcoin_working_document_system_guide.docx
.github/: pull_request_template.md
docs/: 00_PROJECT_BRIEF.md  01_REQUIREMENT_PROCESS.md  02_ROLE_EXTRACTION.md  03_ARCHITECTURE_RULES.md  04_DATA_CONTRACT.md  05_TEST_STRATEGY.md  06_PR_REVIEW_PROCESS.md  07_WORKFLOW.md  08_ROADMAP.md  09_DECISIONS.md  10_CODEX_COMMAND_GUIDE.md  11_DATABASE_COMMAND_MANAGEMENT.md  12_INDICATOR_STRUCTURE_ANALYSIS.md  13_PATTERN_ALGORITHM_ANALYSIS.md  14_INDICATOR_PATTERN_CLASS_USAGE.md
quant_bitcoin/: __init__.py
requirements/: 000_INITIAL_SCOPE.md  REQ_TEMPLATE.md
reviews/: CODEX_SELF_REVIEW.md  PR_TEMPLATE.md  REVIEW_CHECKLIST.md
roles/: RESPONSIBILITY_MATRIX.md  ROLE_MAP.md
tasks/: 000_PROJECT_SETUP.md  001_MARKET_DATA_CONTRACT.md  002_CSV_DATA_PROVIDER.md  003_RSI_STRATEGY.md  004_BASIC_BACKTEST.md  005_PAPER_TRADER.md  006_BINANCE_CANDLE_DOWNLOADER.md  007_IMPROVED_BACKTESTING.md  008_PAPER_TRADING_WITH_STATE.md  009_RISK_MANAGEMENT_TASK_DEFINITION.md  010_BASIC_RISK_CHECKS.md  011_LIVE_TRADING_SAFETY_GATES.md  012_LIVE_TRADING_IMPLEMENTATION_BLOCKER.md  013_PERSISTENCE_SCHEMA_DESIGN.md  014_POSTGRES_BINANCE_BACKFILL.md  015_BINANCE_WEBSOCKET_INGESTION.md  016_CODEX_COMMAND_CONSISTENCY.md  017_WEBSOCKET_INGESTION_READINESS.md  018_DOCKER_WEBSOCKET_INGESTION_SERVICE.md  019_POSTGRES_CANDLE_DATA_PROVIDER.md  020_POSTGRES_BACKTEST_RUNNER.md  021_GRAPH_READY_BACKTEST_PERSISTENCE_SCHEMA.md  (+38 more)
(+95 files in other folders)
