[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-bitcoin"
version = "0.1.0"
description = "Small Python Bitcoin quantitative trading project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["quant_bitcoin*"]
