[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-bitcoin"
version = "0.1.0"
description = "Small Python Bitcoin quantitative trading project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "psycopg[binary]>=3.1",
    "websockets>=12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["quant_bitcoin*"]

[project.scripts]
quant-bitcoin-binance-backfill = "quant_bitcoin.market_data.binance_backfill_cli:main"
quant-bitcoin-websocket-ingestion = "quant_bitcoin.market_data.websocket_ingestion_cli:main"
quant-bitcoin-postgres-backtest = "quant_bitcoin.backtesting.postgres_runner_cli:main"
quant-bitcoin-pattern-backtest = "quant_bitcoin.backtesting.pattern_postgres_runner_cli:main"
